--- a/app/src/main/res/layout/fragment_photo_full_size.xml
+++ b/app/src/main/res/layout/fragment_photo_full_size.xml
@@ -7,7 +7,8 @@
     <ru.lantimat.photogallery.utils.WrapContentViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -28,10 +29,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:transitionName="testTransition"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
