--- a/app/src/main/res/layout/activity_categoty_images_list.xml
+++ b/app/src/main/res/layout/activity_categoty_images_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".browse.photos.CategoryImagesListActivity">
+    tools:context=".ui.category.CategoryByIdImagesListActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
